<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/main_margin"
    tools:context=".pl.view.activities.ExerciseActivity">

    <TextView
        android:id="@+id/exercise_wording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/button_send_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_file"
        android:onClick="sendFile"/>

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_picture"
        android:onClick="requestPicture"/>

    <Button
        android:id="@+id/button_record_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_audio"
        android:onClick="recordAudio"/>

    <Button
        android:id="@+id/button_record_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_video"
        android:onClick="recordVideo"/>

</LinearLayout>